# aula19

./: README.md  database.py  main.py  models.py  pyproject.toml  schema.py  test.db
