[project]
name = "aula19"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Azevedo",email = "g.azevedo0121@gmail.com"}
    
]


readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "unicorn[standard] (>=2.1.1,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
